--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,16 @@
-<p>forgot-password works!</p>
+<button class="btn btn-success btn-sm" [routerLink]="['/login']">
+  Iniciar Sesión
+</button>
+<div class="card mt-5">
+  <div class="card-body">
+    <h3 class="card-title text-center">Por favor ingrese su Email</h3>
+    <div class="form-group">
+      <input type="email" class="form-control" formControlName="userEmail" required />
+    </div>
+    <div class="form-group text-center">
+      <button class="btn btn-primary btn-lg" (click)="onReset()">
+        Reset Password
+      </button>
+    </div>
+  </div>
+</div>
