--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,11 +38,11 @@
       No tienes una cuenta ? <a [routerLink]="['/register']"> Registrate </a>
     </p>
 
-    <!-- <div>
+    <div class="login-content">
       <p>
-        <a [routerLink]="['/forgot-password']"> Forgot password ? </a>
+        <a [routerLink]="['/forgot-password']"> ¿Olvido su contraseña? </a>
       </p>
-    </div> -->
+    </div>
 
   </div>
 
