--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,7 +38,7 @@
       No tienes una cuenta ? <a [routerLink]="['/register']"> Registrate </a>
     </p>
 
-    <div class="login-content">
+    <div class="register">
       <p>
         <a [routerLink]="['/forgot-password']"> ¿Olvido su contraseña? </a>
       </p>
