--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,16 +1,23 @@
-<button class="btn btn-success btn-sm" [routerLink]="['/login']">
+<button class="btn btn-success btn-sm mt-1" [routerLink]="['/login']">
   Iniciar Sesión
 </button>
+<form class="form" [formGroup]="forgotForm" (ngSubmit)="onReset()">
 <div class="card mt-5">
   <div class="card-body">
     <h3 class="card-title text-center">Por favor ingrese su Email</h3>
     <div class="form-group">
+     
       <input type="email" class="form-control" formControlName="userEmail" required />
     </div>
     <div class="form-group text-center">
-      <button class="btn btn-primary btn-lg" (click)="onReset()">
+      </div>
+      <button type="submit" class="btn btn-danger btn-sm" >
         Reset Password
       </button>
-    </div>
+
+
+    
+      
   </div>
 </div>
+</form>
