forgot is  working

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,6 +1,11 @@
-<button class="btn btn-success btn-sm mt-1" [routerLink]="['/login']">
-  Iniciar Sesión
-</button>
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1"><a [routerLink]="['/login']">Iniciar Sesión</a></span>
+  </div>
+</nav>
+
+
+
 <form class="form" [formGroup]="forgotForm" (ngSubmit)="onReset()">
 <div class="card mt-5">
   <div class="card-body">
