--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="login-content">
   <div class="login-content__main">
     <div class="login-content__logo">
-      <img src="./../../../assets/images/logo.svg" alt="" srcset="">
+      <img src="./../../../assets/images/logo.svg" alt="Logo Comfeco" srcset="">
     </div>
 
     <div class="login-content__titles">
