--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -4,8 +4,8 @@
   </div>
 </nav>
 
-
-
+<section class="login-content">
+<div class="login-content__main">
 <form class="form" [formGroup]="forgotForm" (ngSubmit)="onReset()">
 <div class="card mt-5">
   <div class="card-body">
@@ -26,3 +26,6 @@
   </div>
 </div>
 </form>
+</div>
+<div class="login-content__advertisements"></div>
+</section>
