--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
         Login
       </button>
     </form>
-    <button (click)="onGoogleLogin()"  class="btn btn-danger w-100 mt-5" >
+    <button (click)="onGoogleLogin()"  class="btn btn-danger w-100 mt-1" >
       Google
     </button>
 
@@ -41,6 +41,10 @@
     <div class="register">
       <p>
         <a [routerLink]="['/forgot-password']"> ¿Olvido su contraseña? </a>
+      </p>
+      <hr>
+      <p>
+        <a [routerLink]="['/login/terminos']"> Términos de Servicio  - </a>  <a [routerLink]="['/login/privacidad']"> Política de Privacidad </a>
       </p>
     </div>
 
