--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,31 +1,25 @@
-<nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1"><a [routerLink]="['/login']">Iniciar Sesión</a></span>
-  </div>
-</nav>
-
 <section class="login-content">
-<div class="login-content__main">
-<form class="form" [formGroup]="forgotForm" (ngSubmit)="onReset()">
-<div class="card mt-5">
-  <div class="card-body">
-    <h3 class="card-title text-center">Por favor ingrese su Email</h3>
-    <div class="form-group">
-     
-      <input type="email" class="form-control" formControlName="userEmail" required />
-    </div>
-    <div class="form-group text-center">
+  <div class="login-content__main">
+    <form class="form__group" [formGroup]="forgotForm" (ngSubmit)="onReset()">
+      <div class="card mt-5">
+        <div class="card-body">
+          <h3 class="card-title text-center">Por favor ingrese su Email</h3>
+          <div class="form">
+
+            <input type="email" class="input" formControlName="userEmail" required />
+          </div>
+          <div class="form text-center">
+          </div>
+          <button type="submit" class="button-primary-lg ">
+            Reset Password
+          </button>
+
+
+
+
+        </div>
       </div>
-      <button type="submit" class="btn btn-danger btn-sm" >
-        Reset Password
-      </button>
-
-
-    
-      
+    </form>
   </div>
-</div>
-</form>
-</div>
-<div class="login-content__advertisements"></div>
+  <div class="login-content__advertisements"></div>
 </section>
