--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,59 +1,3 @@
-<!-- <div>
-  <h1>REGISTER</h1>
-  <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
-    <div>
-      <label for="email">Nick Name</label>
-      <input type="email" class="form-control" formControlName="nickName" />
-      <p style="color: red" *ngIf="nickName.invalid && (nickName.dirty || nickName.touched)">
-        {{ getErrorMessage("nickName") }}
-      </p>
-    </div>
-    <div>
-      <label for="email">Nombre</label>
-      <input type="email" class="form-control" formControlName="name" />
-      <p style="color: red" *ngIf="name.invalid && (name.dirty || name.touched)">
-        {{ getErrorMessage("name") }}
-      </p>
-    </div>
-    <div>
-      <label for="email">Email</label>
-      <input type="email" class="form-control" formControlName="email" />
-      <p style="color: red" *ngIf="email.invalid && (email.dirty || email.touched)">
-        {{ getErrorMessage("email") }}
-      </p>
-    </div>
-    <div>
-      <label for="password">Password</label>
-      <input type="password" class="form-control" formControlName="password" />
-      <p style="color: red" *ngIf="password.invalid && (password.dirty || password.touched)">
-        {{ getErrorMessage("password") }}
-      </p>
-    </div>
-    <div>
-      <label for="email">WhatsApp</label>
-      <input type="email" class="form-control" formControlName="whatsapp" />
-      <p style="color: red" *ngIf="whatsapp.invalid && (whatsapp.dirty || whatsapp.touched)">
-        {{ getErrorMessage("whatsapp") }}
-      </p>
-    </div>
-    <div>
-      <label for="email">Discord</label>
-      <input type="email" class="form-control" formControlName="discordUser" />
-      <p style="color: red" *ngIf="
-          discordUser.invalid && (discordUser.dirty || discordUser.touched)
-        ">
-        {{ getErrorMessage("discordUser") }}
-      </p>
-    </div>
-    <div>
-      <button type="submit">Register</button>
-    </div>
-  </form>
-  <div>
-    <p>¿No tienes una Cuenta?<a [routerLink]="['/login']"> Login </a></p>
-  </div>
-</div> -->
-
 <section class="login-content">
   <div class="login-content__main">
     <div class="login-content__logo">
@@ -64,7 +8,7 @@
       <h2>Registrar</h2>
     </div>
 
-    <form class="form" [formGroup]="registerForm" (ngSubmit)="onRegister()" >
+    <form class="form" [formGroup]="registerForm" (ngSubmit)="onRegister()">
 
       <div class="form__group">
         <label for="nick">Nick Name</label>
@@ -96,36 +40,33 @@
       <div class="form__group">
         <label for="passwordConfirmacion">Confirmar Contraseña</label>
         <input type="password" formControlName="passwordConfirmacion" placeholder="Confirma tu contraseña" />
-        <span class="form__error" *ngIf="passwordConfirmacion.invalid && (passwordConfirmacion.dirty || passwordConfirmacion.touched)">
-          {{  getErrorMessage("passwordConfirmacion") }}</span>
+        <span class="form__error"
+          *ngIf="passwordConfirmacion.invalid && (passwordConfirmacion.dirty || passwordConfirmacion.touched)">
+          {{ getErrorMessage("passwordConfirmacion") }}</span>
       </div>
       <div class="form__group">
         <label for="whatsapp">WhatsApp</label>
         <input type="number" id="whatsapp" formControlName="whatsapp" placeholder="Ingresa tu whatsapp" />
         <span class="form__error" *ngIf="whatsapp.invalid && (whatsapp.dirty || whatsapp.touched)">
-          {{  getErrorMessage("whatsapp") }}</span>
+          {{ getErrorMessage("whatsapp") }}</span>
       </div>
 
       <div class="form__group">
         <label for="whatsapp">Discord</label>
         <input type="text" id="whatsapp" formControlName="discordUser" placeholder="Ingresa usuario discord" />
         <span class="form__error" *ngIf="discordUser.invalid && (discordUser.dirty || discordUser.touched)">
-          {{  getErrorMessage("discordUser") }}</span>
+          {{ getErrorMessage("discordUser") }}</span>
       </div>
       <div>
-        <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid">Register</button>
+        <button type="submit" class="button-primary-lg" [disabled]="!registerForm.valid">Register</button>
       </div>
     </form>
 
-    <p class="login">
-      Ya tienes una cuenta ? <a [routerLink]="['/login']"> Iniciar Sesión </a>
+    <p class="login" >
+      Ya tienes una cuenta ? <a  [routerLink]="['/login']"> Iniciar Sesión </a>
     </p>
 
-    <!-- <div>
-      <p>
-        <a [routerLink]="['/forgot-password']"> Forgot password ? </a>
-      </p>
-    </div> -->
+   
   </div>
 
   <div class="login-content__advertisements"></div>
