--- a/src/app/shared/compnents/insignias/insignias.component.html
+++ b/src/app/shared/compnents/insignias/insignias.component.html
@@ -10,7 +10,10 @@
   class="mt-2 mb-5"
 >
   <ng-template swiperSlide *ngFor="slide of insignias; index as i" class="text-centar">
-    <img src="./../../../../assets/images/sponsors/{{i}}.jpg" style="border-radius: 50%; width: 70px;" alt="...">
+    
+  <img *ngIf="insignias[i].isActive"src="./../../../../assets/images/insignias/{{insignias[i].image}}Active.png" style="border-radius: 50%; width: 100px;" alt="...">
+  <img *ngIf="!insignias[i].isActive" src="./../../../../assets/images/insignias/{{insignias[i].image}}.png"
+    style="border-radius: 50%; width: 100px;" alt="...">
   </ng-template>
 
 </swiper>
